src/global.scss
/* ... */
.monthview-primary-with-event, .monthview-secondary-with-event {
  background-color: #705CC4 !important;
  color: #ffffff !important;
}

.monthview-current {
  color: #ffffff !important;
}

.monthview-selected {
  color: #000000 !important
}

.calendar-hour-column, .weekview-header {
  border: 0px !important;
}

.weekview-header, .slides-container {
  border: 0px;
}

.weekview-normal-event-container {
  bottom: 0px;
}

.flex-direction-row {
  flex-direction: row;  
}

.margin-top-5 {
  margin-top: 5px;
}

.margin-top-25 {
  margin-top: 25px;
}

.margin-top-26 {
  margin-top: 26px;
}

.margin-top-30 {
  margin-top: 30px;
}

.margin-top-32 {
  margin-top: 32px;
}

.margin-top-33 {
  margin-top: 33px;
}

.margin-top-34 {
  margin-top: 34px;
}

.margin-top-35 {
  margin-top: 35px;
}

.margin-top-40 {
  margin-top: 40px;
}

.margin-top-50 {
  margin-top: 50px;
}

.margin-top-96 {
  margin-top: 96px;
}

.margin-top-104 {
  margin-top: 104px;
}

.margin-top-115 {
  margin-top: 115px;
}

.margin-top-32-auto {
  margin: 32px auto auto auto;
}

.margin-top-36-auto {
  margin: 32px auto auto auto;
}

.margin-top-auto {
  margin-top: auto;
}

.margin-bottom-auto {
  margin-bottom: auto;
}

.margin-auto-auto {
  margin: auto auto;
}

.padding-end-3 {
  --padding-end: 3px;
}

.padding-start-3 {
  --padding-start: 3px;
}

.padding-bottom-15 {
  padding-bottom: 15px !important;
}

.padding-bottom-50 {
  padding-bottom: 50px !important;
}

.padding-vertical-10 {
  padding-top: 10px;
  padding-bottom: 10px;
}

.padding-horizontal-20 {
  padding-left: 20px;
  padding-right: 20px;
}

.weekview-container {
  width: 95% !important;
  margin: auto;
}

.page-title {
  font-family: Nunito;
  font-size: 32px;
  font-style: normal;
  font-weight: 600;
  line-height: 32px;
  letter-spacing: 1px;
  text-align: center;
  color: #ffffff;
}

.swiper-slide, swiper-slide-active {
  width: 100% !important;
}

.primary {
  background-color: var(--ion-color-primary);
  color: var(--ion-color-white) !important;
}

.calendar-event-inner {
  height: 100%;
}

.background-secondary {
  background-color: var(--ion-color-secondary) !important;
  color: #000000 !important;
}

.background-white {
  background-color: var(--ion-color-white);
}

.background-transparent {
  background-color: transparent;
}

.background-FCFDFF {
  --background: #FCFDFF;
}


.background-FFFFFF {
  --background: #FFFFFF;
  background-color: #FFFFFF;
}

.background-EDF2FF {
  --background: #EDF2FF;
  background-color: #EDF2FF !important;
}

.background-F6F7FB {
  --background: #F6F7FB;
  background-color: #F6F7FB;
}

.background-6049C4 {
  --backgorund: #6049C4;
  background-color: #6049C4;
}

.background-F0F3F9 {
  --background: #F0F3F9;
  background-color: #F0F3F9;
}

ion-input {
  scrollbar-width: none;
  text-align: center;
  input {
      text-align: center;
      ::-webkit-input-placeholder {
          text-align: center;
      }
    }
    border-bottom-color: transparent;
}

.justify-conent-space-evenly {
  justify-content: space-evenly;;
}

.justify-content-center {
  justify-content: center;
}

.color-6049C4 {
  color: #6049C4;
  --color: #6049C4;
}

.color-39297F {
  color: #39297F !important;
  --color: #39297F !important;
}

.color-22194D {
  color: #22194D;
  --color: #22194D;
}

.color-B4AEE7 {
  color: #B4AEE7;
  --color: #B4AEE7;
}

.color-FFFFFF {
  color: #FFFFFF;
  --color: #FFFFFF;
}

.height-54px {
  height: 54px;
}

.border-radius-2px {
  border-radius: 2px;
}

.border-radius-10px {
  border-radius: 10px;
}

.border-radius-15px {
  border-radius: 15px;
}

.border-radius-20px {
  border-radius: 20px;
}

.border-radius-22px {
  border-radius: 22px;
}

.border-radius-30px {
  border-radius: 30px;
}

.border-radius-35px {
  border-radius: 35px;
}

.border-radius-48px {
  border-radius: 48px;
}

.border-radius-5px {
  border-radius: 5px;
}

.border-radius-100px {
  border-radius: 100px;
}

.border-radius-50per {
  border-radius: 50%;
}

.overflow-scroll {
  overflow: scroll;
}

.overflow-hidden {
  overflow: hidden !important;
}

.no-scrollbar {
  scrollbar-width: none;
}

.margin-10 {
  margin: 10px;
}

.margin-3 {
  margin: 3px;
}

.margin-0 {
  margin: 0px;
}

.margin-left-0 {
  margin-left: 0px;
}

.margin-left-3 {
  margin-left: 3px;
}

.margin-left-5 {
  margin-left: 5px;
}

.margin-left-7 {
  margin-left: 7px;
}

.margin-left-10 {
  margin-left: 10px;
}

.margin-left-15 {
  margin-left: 15px;
}

.margin-left-17 {
  margin-left: 17px;
}

.margin-left-auto {
  margin-left: auto;
}

.margin-left-30 {
  margin-left: 30px;
}

.margin-left-50 {
  margin-left: 50px;
}

.margin-right-auto {
  margin-right: auto;
}

.margin-vertical-center {
  margin-top: auto;
  margin-bottom: auto;
}

.margin-vertical-auto {
  margin-top: auto;
  margin-bottom: auto;
}

.margin-right-3 {
  margin-right: 3px;
}

.margin-right-3-left-0-auto {
  margin: auto 3px auto 0;
}

.padding-8-0-8-0 {
  padding: 8px 0 8px 0;
}

.padding-8-0-8-8 {
  padding: 8px 0 8px 8px;
}

.padding-3 {
  padding: 3px;
}

.margin-right-5 {
  margin-right: 5px;
}

.margin-bottom-20 {
  margin-bottom: 20px;
}

.margin-auto-left-3 {
  margin-left: 3px;
  margin-top: auto;
  margin-bottom: auto;
}

.min-height-30px {
  min-height: 30px;
}

.min-height-75px {
  min-height: 75px;
}

.height-30px {
  height: 30px;
}

.height-36px {
  height: 36px;
}

.height-44px {
  height: 44px;
}

.height-48px {
  height: 48px;
}

.height-60px {
  height: 60px;
}

.height-80px {
  height: 80px;
}

.height-168px {
  height: 168px;
}

.height-auto {
  height: auto !important;
}

.margin-bottom-1 {
  margin-bottom: 1px;
}

.margin-bottom-3 {
  margin-bottom: 3px;
}

.display-inline-block {
  display: inline-block;
}

.width-60px {
  width: 60px;
}

.width-60 {
  width: 60%;
}

.width-70 {
  width: 70%;
}

.width-80 {
  width: 80%;
}

.width-100 {
  width: 100%;
  --width: 100%;
}

.width-18 {
  width: 18%;
}

.width-20 {
  width: 20%;
}

.width-auto {
  width: auto;
}

.width-40 {
  width: 40%;
}
/* ... */

